--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,18 @@ plugins:
 
 permalink: none
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "post"
+      author: "Alanna Golownia"
+      category: "jekyll"
+
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
